@@ -28,6 +28,6 @@ kn revision [flags]
 
 * [kn](kn.md)	 - Knative client
 * [kn revision delete](kn_revision_delete.md)	 - Delete a revision.
-* [kn revision describe](kn_revision_describe.md)	 - Describe revisions.
+* [kn revision describe](kn_revision_describe.md)	 - Show details of a revision
 * [kn revision list](kn_revision_list.md)	 - List available revisions.
 
