@@ -29,7 +29,7 @@ kn source binding [flags]
 * [kn source](kn_source.md)	 - Event source command group
 * [kn source binding create](kn_source_binding_create.md)	 - Create a sink binding.
 * [kn source binding delete](kn_source_binding_delete.md)	 - Delete a sink binding.
-* [kn source binding describe](kn_source_binding_describe.md)	 - Describe a sink binding.
+* [kn source binding describe](kn_source_binding_describe.md)	 - Show details of a sink binding
 * [kn source binding list](kn_source_binding_list.md)	 - List sink bindings.
 * [kn source binding update](kn_source_binding_update.md)	 - Update a sink binding.
 
