@@ -29,7 +29,7 @@ kn trigger [flags]
 * [kn](kn.md)	 - Knative client
 * [kn trigger create](kn_trigger_create.md)	 - Create a trigger
 * [kn trigger delete](kn_trigger_delete.md)	 - Delete a trigger.
-* [kn trigger describe](kn_trigger_describe.md)	 - Describe a trigger.
+* [kn trigger describe](kn_trigger_describe.md)	 - Show details of a trigger
 * [kn trigger list](kn_trigger_list.md)	 - List available triggers.
 * [kn trigger update](kn_trigger_update.md)	 - Update a trigger
 
