@@ -31,13 +31,13 @@ func NewCronJobDescribeCommand(p *commands.KnParams) *cobra.Command {
 
 	cronJobDescribe := &cobra.Command{
 		Use:   "describe NAME",
-		Short: "Describe a CronJob source.",
+		Short: "Show details of a CronJob source",
 		Example: `
   # Describe a cronjob source with name 'mycronjob'
   kn source cronjob describe mycronjob`,
 		RunE: func(cmd *cobra.Command, args []string) error {
 			if len(args) != 1 {
-				return errors.New("'source cronjob describe' requires the name of the source as single argument")
+				return errors.New("'kn source cronjob describe' requires name of the source as single argument")
 			}
 			name := args[0]
 
